Navbar highlighting und mhbErstellung auf alten Code zurückgesetzt (aktueller Code nicht im Repository)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -5,6 +5,8 @@
         $(document).ready(function () {
             $("#modulverantwortlicher").tablesorter();
             $("#lehrender").tablesorter();
+
+            highlightMe(document.getElementById('eigeneModuleLink'));
         });
     </script>
     <div class="table-responsive">
