--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/adminNav.html.twig
@@ -4,10 +4,10 @@
             <a>Administration</a>
         </li>
         <li role="presentation">
-            <a href="{{ path('benutzerVerwaltung') }}">Benutzerverwaltung</a>
+            <a id="benutzerverwaltungLink" href="{{ path('benutzerVerwaltung') }}">Benutzerverwaltung</a>
         </li>
         <li role="presentation">
-            <a href="{{ path('studiengangVerwaltung') }}">Studiengangverwaltung</a>
+            <a id="studiengangverwaltungLink" href="{{ path('studiengangVerwaltung') }}">Studiengangverwaltung</a>
         </li>
     {% endif %}
 {% endif %}
