--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/dozentNav.html.twig
@@ -4,10 +4,10 @@
             <a>Dozent</a>
         </li>
         <li role="presentation">
-            <a href="{{ path('eigeneModule') }}">Modulansicht (verwaltbare)</a>
+            <a id="eigeneModuleLink" href="{{ path('eigeneModule') }}">Modulansicht (verwaltbare)</a>
         </li>
         <li role="presentation">
-            <a href="{{ path('planungAnzeigen') }}">Modulplanung</a>
+            <a id="modulplanungLink" href="{{ path('planungAnzeigen') }}">Modulplanung</a>
         </li>
     {% endif %}
 {% endif %}
