--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
@@ -5,6 +5,9 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $("#table").tablesorter();
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('alleModuleLink'));
         });
     </script>
     <table id="table" class="table table-bordered tablesorter" >
