--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
@@ -4,6 +4,9 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $("#table").tablesorter();
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('mhbUebersichtLink'));
         });
     </script>
     <div class="table-responsive">
