--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
@@ -5,6 +5,9 @@
         $(document).ready(function () {
             $("#table-without-code").tablesorter();
             $("#table-with-code").tablesorter();
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('modulcodeLink'));
         });
     </script>
     <div class="table-responsive">
