--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -11,7 +11,7 @@
     {#<link href="{{ asset('bundles/fhbingenmhb/css/bootstrap-theme.css') }}" rel="stylesheet"/>#}
     <!-- Tablesorter -->
     <link href="{{ asset('bundles/fhbingenmhb/css/tablesorter.css') }}" rel="stylesheet"/>
-    <!-- own Styles -->
+    <!-- own styles -->
     <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet"/>
 
     {#
@@ -29,6 +29,9 @@
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.min.js') }}"></script>
     <!-- Tablesorter -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
+    <!-- own scripts -->
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/own.js') }}"></script>
+
 </head>
 <body>
 <div id="header" class="navbar navbar-default navbar-fixed-top navbar-brand">
