--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -38,7 +38,6 @@
 {%- endblock form_widget_compound %}
 
 {% block content %}
-
     <script type="text/javascript">
         var lehrendeCount = '{{ form.modul|length }}';
 
@@ -47,6 +46,9 @@
                 e.preventDefault();
                 return addAnotherLehrende();
             });
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('eigeneModuleLink'));
         });
 
         function addAnotherLehrende(){
