navbar highlighting in Verwaltungs-Templates ergänzt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
@@ -4,6 +4,9 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $("#table").tablesorter();
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('studiengangverwaltungLink'));
         });
     </script>
     <h4 style="font-weight: bold">Studiengangübersicht</h4>
