--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -1,6 +1,13 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
 {% block content %}
+    <script type="text/javascript">
+        $(document).ready(function () {
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('benutzerverwaltungLink'));
+        });
+    </script>
+
     {# TODO: Layout so sinnvoll? Keine Sortierung möglich #}
     <div class="table-responsive">
         <table class="table table-bordered">
