--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -34,6 +34,9 @@
                 e.preventDefault();
                 return addAnotherFachgebiet();
             });
+
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('studiengangverwaltungLink'));
         });
 
         function addAnotherVertiefungsrichtung(){
