Submit- und  Reset-Buttons

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -122,6 +122,8 @@
             {% endfor %}
         </ul>
         <a id="add-another-lehrende">Lehrenden hinzufügen</a>
+
+        {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
 
