--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeErstellung.html.twig
@@ -28,6 +28,8 @@
             {% endif %}
             {{ form_row(form.code) }}
         </table>
+
+        {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
 {% endblock %}
