--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerErstellen.html.twig
@@ -32,6 +32,8 @@
             {#{{ form_row(form.password) }}#}
             {{ form_row(form.roles) }}
         </table>
+
+        {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
 
