--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -134,6 +134,7 @@
         </ul>
         <a id="add-another-fachgebiet">Fachgebiet hinzufügen</a>
 
+        {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
 {% endblock %}
