--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -62,6 +62,8 @@
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.voraussetzungLP) }}
         </table>
+
+        {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
 {% endblock %}
