--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -63,4 +63,8 @@
         {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
+
+    {% include '@FHBingenMHB/flashbags.html.twig' %}
+
 {% endblock %}
+
