--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -66,4 +66,7 @@
         {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
     </div>
+
+    {% include '@FHBingenMHB/flashbags.html.twig' %}
+
 {% endblock %}
