--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -48,14 +48,6 @@
         </ul>
     </div>
 
-    {% for type, messages in app.session.flashBag.all %}
-        {% for message in messages %}
-            {% if type == 'info' %}
-                <script type="text/javascript">
-                    alert('{{ message|raw }}');
-                </script>
-            {% endif %}
-        {% endfor %}
-    {% endfor %}
+    {% include '@FHBingenMHB/flashbags.html.twig' %}
 
 {% endblock %}
