erster versuch filterung der fachgebiete

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/angebot.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/angebot.html.twig
@@ -49,6 +49,8 @@
             {% endif %}
             {{ form_row(form.abweichenderNameDE) }}
             {{ form_row(form.abweichenderNameEN) }}
+            {{ form_row(form.studienplan_ws) }}
+            {{ form_row(form.studienplan_ss) }}
 
         </table>
 
