--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/vorAngebot.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/vorAngebot.html.twig
@@ -45,6 +45,8 @@
             {{ form_errors(form) }}
             {{ form_row(form.studiengang) }}
             {{ form_row(form.angebotsart) }}
+            {{ form_row(form.studienplan_ws) }}
+            {{ form_row(form.studienplan_ss) }}
         </table>
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
