--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -19,6 +19,7 @@
                 <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                 <th style="min-width: 150px; width: 15%">Häufigkeit</th>
                 <th style="min-width: 220px; width: 23%">Lehrende</th>
+                <th style="min-width: 220px; width: 23%">Studiengang</th>
             </tr>
             </thead>
             <tbody>
@@ -37,6 +38,12 @@
                             {{ name }}<br/>
                         {% endfor %}
                     </td>
+                    <td>
+                            {% for name in stgZuModul[count] %}
+                            {{name}}<br />
+                        {% endfor %}
+                        <a href="#">In weiterem Studiengang anbieten</a>
+                    </td>
                 </tr>
                 {% set count = count +1 %}
             {% endfor %}
@@ -52,6 +59,7 @@
                 <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                 <th style="min-width: 150px; width: 15%">Häufigkeit</th>
                 <th style="min-width: 220px; width: 23%">Modulverantwortlicher</th>
+                <th style="min-width: 220px; width: 23%">Studiengang</th>
             </tr>
             </thead>
             <tbody>
@@ -63,6 +71,12 @@
                     <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
                     <td>{{ veranstaltung.haeufigkeit }}</td>
                     <td>{{ veranstaltung.beauftragter }}</td>
+                    <td>
+                        {% for name in stgZuModul[count] %}
+                            {{name}}<br />
+                        {% endfor %}
+                        <a href="#">In weiterem Studiengang anbieten</a>
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
