- Prüfungsform Sonstiges hinzugefügt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -104,6 +104,7 @@
             {{ form_row(form.voraussetzungInh) }}
             {{ form_row(form.lehrveranstaltungen) }}
             {{ form_row(form.pruefungsformen) }}
+            {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
         </table>
 
