--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -57,6 +57,7 @@
             {{ form_row(form.voraussetzungInh) }}
             {{ form_row(form.lehrveranstaltungen) }}
             {{ form_row(form.pruefungsformen) }}
+            {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
         </table>
 
