pruefungsform sonstige richtig, selbststudium wird im hintergrund berechnet

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/alleModule.html.twig
@@ -17,7 +17,7 @@
             <th style="min-width: 100px; width: 7%">Kürzel</th>
             <th style="min-width: 130px; width: 12%">Erstelldatum</th>
             <th style="min-width: 150px; width: 15%">Häufigkeit</th>
-            <th style="min-width: 220px; width: 23%">Modulverantwortlicher</th>
+            <th style="min-width: 220px; width: 23%">Modulbeauftragter</th>
             <th style="min-width: 8px; width: 23%">Autor</th>
             <th style="min-width: 220px; width: 23%">Studiengang</th>
         </tr>
