--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -10,7 +10,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Module als Modulverantwortlicher</h3>
+        <h3>Module als Modulbeauftragter</h3>
         <table id="modulverantwortlicher" class="table table-bordered tablesorter">
             <thead>
             <tr>
@@ -58,7 +58,7 @@
                 <th style="min-width: 100px; width: 7%">Kürzel</th>
                 <th style="min-width: 130px; width: 12%">Erstelldatum</th>
                 <th style="min-width: 150px; width: 15%">Häufigkeit</th>
-                <th style="min-width: 220px; width: 23%">Modulverantwortlicher</th>
+                <th style="min-width: 220px; width: 23%">Modulbeauftragter</th>
                 <th style="min-width: 220px; width: 23%">Studiengang</th>
             </tr>
             </thead>
