CSS (Button-Farbe und Abstand nach unten), außerdem "in weitem Studiengang anbieten"

--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -112,3 +112,8 @@ body {
     font-weight: bolder;
     page-break-after: avoid;
 }
+
+div.ourButtons {
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
