--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -28,7 +28,9 @@
             {% set count = 0 %}
             {% for veranstaltung in modulverantwortung %}
                 <tr>
-                    <td><a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a></td>
+                    <td>
+                        <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
+                    </td>
                     <td>{{ veranstaltung.kuerzel }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
@@ -39,10 +41,10 @@
                         {% endfor %}
                     </td>
                     <td>
-                            {% for name in stgZuModul[count] %}
-                            {{name}}<br />
+                        {% for name in stgZuModul[count] %}
+                            {{ name }}<br/>
                         {% endfor %}
-                        <a href="#">In weiterem Studiengang anbieten</a>
+                        <a href=" {{ path('vorAngebot', {'modulID': veranstaltung.getModulID()}) }}">In weiterem Studiengang anbieten</a>
                     </td>
                 </tr>
                 {% set count = count +1 %}
@@ -65,7 +67,9 @@
             <tbody>
             {% for veranstaltung in modullehrend %}
                 <tr>
-                    <td><a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a></td>
+                    <td>
+                        <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
+                    </td>
                     <td>{{ veranstaltung.kuerzel }}</td>
                     {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
                     <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
@@ -73,9 +77,8 @@
                     <td>{{ veranstaltung.beauftragter }}</td>
                     <td>
                         {% for name in stgZuModul[count] %}
-                            {{name}}<br />
+                            {{ name }}<br/>
                         {% endfor %}
-                        <a href="#">In weiterem Studiengang anbieten</a>
                     </td>
                 </tr>
             {% endfor %}
