--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/buttons.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/buttons.html.twig
@@ -1,4 +1,4 @@
-<p>
+<div class="ourButtons">
     <button class="btn btn-default" type="reset">zurücksetzen</button>
-    <button class="btn btn-default" type="submit">abschicken</button>
-</p>
+    <button class="btn btn-primary" type="submit">abschicken</button>
+</div>
