--- a/web/bundles/fhbingenmhb/css/style.css
+++ b/web/bundles/fhbingenmhb/css/style.css
@@ -112,3 +112,8 @@ body {
     font-weight: bolder;
     page-break-after: avoid;
 }
+
+div.ourButtons {
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
