--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -42,9 +42,12 @@
                 </td>
             </tr>
         </table>
+        {# TODO: Passwort-Reset ist experimentell, Abfrage fehlt #}
+        {#
         <ul>
-            <li><a href="{{ path('passwdReset') }}">Alle Passwörter zurücksetzen</a></li>
+             <li><a href="{{ path('passwdReset') }}">Alle Passwörter zurücksetzen</a></li>
         </ul>
+         #}
     </div>
 
     {% include '@FHBingenMHB/flashbags.html.twig' %}
